Add GUI for client