@@ -1,6 +1,7 @@
 plugins {
     id 'java'
-    id 'com.github.johnrengelman.shadow' version '7.1.2'
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.13'
 }
 
 group = 'com.manilov'
@@ -16,22 +17,59 @@ repositories {
 jar {
     manifest {
         attributes(
-                'Main-Class': 'com/manilov/Main'
+                'Main-Class': 'com.manilov.ConfigUI'
         )
     }
-}
-
-shadowJar {
-    archiveBaseName = 'client-general-shadow'
-    version = null
 }
 
 dependencies {
     implementation name: 'mqtt_udp-0.5.0'
     implementation group: 'org.eclipse.paho', name: 'org.eclipse.paho.client.mqttv3', version: '1.2.5'
+    implementation('org.controlsfx:controlsfx:11.1.2')
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
+
+javafx {
+    version = '21'
+    modules = ['javafx.controls', 'javafx.fxml']
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
+application {
+    mainModule = 'com.manilov'
+    mainClass = 'com.manilov.ConfigUI'
+}
+
+def javafxPath = System.getProperty('user.home') + '/javafx/javafx-sdk-21.0.8/lib'
+
+task runWithJavaFX(type: JavaExec) {
+    group = "Execution"
+    description = "Run the main class with JavaFX module path"
+    classpath = sourceSets.main.runtimeClasspath
+    mainClass = application.mainClass
+
+    jvmArgs = [
+            "--module-path", javafxPath,
+            "--add-modules", "javafx.controls,javafx.fxml"
+    ]
+}
+
+task checkJavaFX {
+    doFirst {
+        def javafxDir = new File(javafxPath)
+        if (!javafxDir.exists()) {
+            throw new GradleException("JavaFX SDK not found at: ${javafxPath}\n" +
+                    "Please download from https://gluonhq.com/products/javafx/ and extract to ~/javafx/")
+        }
+        println "JavaFX found at: ${javafxPath}"
+    }
+}
+
+runWithJavaFX.dependsOn checkJavaFX
 
 test {
     useJUnitPlatform()
